--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch public/assets/sass/main.scss:public/assets/css/main.css",
+    "sass-build": "sass --watch public/assets/sass/main.scss:public/assets/css/main.css",
     "build": "sass public/assets/sass/main.scss:public/assets/css/main.css --style=compressed",
     "prod": "webpack --mode=production",
     "dev": "webpack serve --watch --content-base public --hot"
