--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass-build": "sass --watch public/assets/sass/main.scss:public/assets/css/main.css",
-    "sass:build": "sass public/assets/sass/main.scss:public/assets/css/main.css --style=compressed",
+    "sass": "sass --watch public/assets/sass/main.scss:public/assets/css/main.css",
+    "sass-build": "sass public/assets/sass/main.scss:public/assets/css/main.css --style=compressed",
     "build": "webpack --mode=production",
     "dev": "webpack serve --watch --content-base public --hot"
   },
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
-    "date-fns": "^2.16.1"
+    "date-fns": "^2.16.1",
+    "firebase": "^8.2.3"
   }
 }
